--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "6789TV",
-    "short_name": "6789TV",
+    "name": "LibreTV",
+    "short_name": "LibreTV",
     "description": "免费在线视频搜索与观看平台",
     "start_url": ".",
     "display": "standalone",
